# file-collector

./: .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.yml  README.md  azure-pipelines.yml  cabal-ghcjs.project  cabal.project  lib.js  out.frefs.js  out.frefs.json  out.stats  rts.js  stack.yaml
backend/: .gitignore  .stylish-haskell.yaml  LICENSE  cabal.project  cabal.project.freeze  file-collector-backend.cabal  fmt_all.sh  package.yaml  stack.yaml
backend/app/: InsertSimpleData.hs  Server.hs
backend/config/: dev.json
backend/csrc/: aliyun_oss.c  aliyun_oss.h
backend/src/FileCollector/Backend/: App.hs  Config.hs  Database.hs  Handler.hs  Logger.hs  Main.hs
backend/src/FileCollector/Backend/Core/: BasicAuth.hs  File.hs  Password.hs  User.hs
backend/src/FileCollector/Backend/Core/Class/: Serializable.hs
backend/src/FileCollector/Backend/Core/File/: Authorization.hs
backend/src/FileCollector/Backend/Database/: Class.hs  Types.hs
backend/src/FileCollector/Backend/Database/Class/: MonadConnection.hs  MonadDirectoryContent.hs  MonadDirectoryUploader.hs  MonadPendingUploadFile.hs  MonadReadDirectory.hs  MonadReadFile.hs  MonadReadUser.hs  MonadUser.hs  MonadWriteDirectory.hs  MonadWriteFile.hs
backend/src/FileCollector/Backend/Database/Class/Internal/: Prelude.hs
backend/src/FileCollector/Backend/Database/Impl/: DirectoryContent.hs  DirectoryUploader.hs  PendingUploadFile.hs  ReadDirectory.hs  ReadFile.hs  WriteDirectory.hs  WriteFile.hs
backend/src/FileCollector/Backend/Database/Impl/Internal/: Prelude.hs
backend/src/FileCollector/Backend/Database/Types/: CanUploadTo.hs  Directory.hs  File.hs  HashValue.hs  Internal.hs  PendingUploadFile.hs  Role.hs  UploadRule.hs  User.hs
backend/src/FileCollector/Backend/Handler/: AppHandler.hs  Auth.hs
backend/src/FileCollector/Backend/Handler/Impl/: File.hs  Prelude.hs  User.hs
backend/src/FileCollector/Backend/IO/Time/Class/: MonadCurrentTime.hs
backend/src/FileCollector/Backend/IO/UUID/Class/: MonadUUID.hs
backend/src/FileCollector/Backend/Oss/: Aliyun.hs
backend/src/FileCollector/Backend/Oss/Aliyun/: Internal.hs
backend/src/FileCollector/Backend/Oss/Class/: MonadOssServer.hs  MonadOssService.hs  MonadReadAliyunConfig.hs
backend/src/FileCollector/Backend/Oss/Impl/: Aliyun.hs
backend/src/FileCollector/Backend/Oss/Impl/Aliyun/: Internal.hs
backend/src/Isumi/FileCollector/: Api.hs  Server.hs
backend/src/Isumi/FileCollector/Api/: Directory.hs  Prelude.hs  User.hs
backend/src/Isumi/FileCollector/Api/Internal/: Prelude.hs
backend/src/Isumi/FileCollector/Server/: Auth.hs  Handler.hs  Password.hs  Persist.hs  SqlConnPool.hs
backend/src/Isumi/FileCollector/Server/Handler/: Prelude.hs  User.hs
backend/src/Isumi/FileCollector/Server/Handler/Internal/: Prelude.hs
backend/src/Isumi/FileCollector/Server/Persist/: Entity.hs  Prelude.hs  User.hs
backend/src/Isumi/FileCollector/Server/Persist/Entity/: FileLocation.hs  Role.hs
backend/test/db/FileCollector/Backend/Database/Spec/: ReadDirectorySpec.hs  TestData.hs  Util.hs
backend/test/int/Isumi/FileCollector/IntTest/: Client.hs
backend/test/int/Isumi/FileCollector/IntTest/Client/: UserSpec.hs  Util.hs
backend/test/int/Isumi/FileCollector/IntTest/DbGen/: Simple.hs
backend/test/integration/FileCollector/Backend/Test/: DirectorySpec.hs  UserSpec.hs  Util.hs
backend/test/test-data/FileCollector/Backend/TestData/: Simple.hs
backend_hs/: .gitignore  CHANGELOG.md  file-collector-backend.cabal
backend_java/: .gitignore  build.gradle  settings.gradle
ci_scripts/: backend_build_test.sh  backend_hs_build_test.sh  backend_hs_install.sh  backend_install.sh  backend_java_build_test.sh  frontend_build_test.sh  frontend_ts_build_test.sh  ghc_build_test.sh
common/: file-collector-common.cabal  package.yaml
common/app/: GenApiDoc.hs
common/src/FileCollector/Common/: Api.hs  Types.hs
common/src/FileCollector/Common/Api/: Auth.hs  Dir.hs  File.hs  User.hs
common/src/FileCollector/Common/Base/: Aeson.hs  Convertible.hs  MonadConvertible.hs
common/src/FileCollector/Common/Types/: Convertible.hs  Credential.hs  Directory.hs  DirectoryDeleteResult.hs  DownloadRequest.hs  File.hs  FullFilePath.hs  HashValue.hs  JsonByteString.hs  OssProvider.hs  Password.hs  PutFileFailure.hs  User.hs  UserInfo.hs
common/src/FileCollector/Common/Types/OssProviderImpl/: Aliyun.hs
common/src/FileCollector/Common/Utils/: Aeson.hs
doc/: architecture.md  demand_analysis.md  upload_procedure.md
frontend/: .gitignore  Setup.hs  file-collector-frontend.cabal  package-lock.json  package.json  package.yaml  webpack.config.js
frontend/csrc/: current_path.c
frontend/jssrc/: hello.js
frontend/src/FileCollector/Frontend/: AppEnv.hs  Config.hs  Main.hs  Message.hs  Service.hs
frontend/static/js/: TimeZone.js
frontend/static/styles/: LanguageChooser.scss  _FileExplorer.scss  _LanguageChooser.scss  _Login.scss  _TopBar.scss  _UserControl.scss  all.scss
frontend/static/styles/FileExplorer/: _DirectorySettings.scss
frontend/values/messages/directory_settings/: en-US.msg  zh-CN.msg
frontend/values/messages/file_explorer/: en-US.msg  zh-CN.msg
frontend/values/messages/login/: en-US.msg  zh-CN.msg  zh-cn.msg
frontend/values/messages/topbar/: en-US.msg  zh-CN.msg
frontend_hs/: Setup.hs  file-collector-frontend.cabal
frontend_hs/app/: Main.hs  MainGHCJS.hs  MainGHCWarp.hs
frontend_hs/app/FileCollector/Frontend/Main/: GHCWarp.hs
frontend_hs/csrc/: current_path.c
frontend_hs/src/FileCollector/Frontend/: AppEnv.hs  Main.hs  Message.hs  Utils.hs
frontend_hs/src/FileCollector/Frontend/Environment/: BasicEnv.hs  Preference.hs  UserConfig.hs  UserEnv.hs
frontend_hs/src/FileCollector/Frontend/Monad/: Language.hs
frontend_hs/src/FileCollector/Frontend/Monad/Class/: Language.hs
frontend_hs/src/FileCollector/Frontend/UI/: Login.hs  Uploader.hs
frontend_hs/src/FileCollector/Frontend/UI/Component/: Button.hs
frontend_ts/: package-lock.json  package.json
scripts/: count_lines.sh
styles/: all.css  all.min.css
(+39 files in other folders)
