cabal-version:       2.2
name:                file-collector-backend
version:             0.1.0.0
synopsis:            Server for file-collector
-- description:
homepage:            https://github.com/isumif/file-collector
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isumi Feng
maintainer:          contact@zelinf.net
copyright:           Isumi Feng, Lagrand, Joyce Du, cwy
category:            Web

common base
  build-depends:
      base ^>= 4.11
  default-language: Haskell2010
  ghc-options: -Wall

common exe-base
  import: base
  build-depends: file-collector-backend
  ghc-options: -threaded

library
  import: base
  hs-source-dirs: src
  exposed-modules:
      FileCollector.Backend.Main
      FileCollector.Backend.App
      FileCollector.Backend.Config
      FileCollector.Backend.Logger
      FileCollector.Backend.Handler
      FileCollector.Backend.Handler.AppHandler
      FileCollector.Backend.Handler.Auth
      FileCollector.Backend.Handler.Impl.User
      FileCollector.Backend.Database
      FileCollector.Backend.Database.Types.Internal
      FileCollector.Backend.Database.Types.User
      FileCollector.Backend.Database.Types.Role
      FileCollector.Backend.Database.Class.MonadConnection
      FileCollector.Backend.Database.Class.MonadUser
      FileCollector.Backend.Oss.Class.MonadOssServer
      FileCollector.Backend.Oss.Aliyun
      FileCollector.Backend.Core.BasicAuth
      FileCollector.Backend.Core.User
      FileCollector.Backend.Core.Password
  build-depends:
      file-collector-common
    , servant >= 0.14 && < 0.16
    , servant-server >= 0.14 && < 0.16
    , warp >= 3.2.25 && < 3.3
    , persistent ^>= 2.8.2
    , persistent-template >= 2.5.4 && < 2.6
    , persistent-sqlite ^>= 2.8.2
    , resource-pool >= 0.2.3 && < 0.3
    , text >= 1.2.3 && < 1.3
    , bytestring >= 0.10.8 && < 0.11
    , time >= 1.8.0 && < 1.9
    , aeson ^>= 1.3.1.1
    , monad-logger >= 0.3.30 && < 0.4
    , fast-logger ^>= 2.4.11
    , lens ^>= 4.16.1
    , mtl >= 2.2.2 && < 2.3
    , transformers >= 0.5.5 && < 0.6
    , memory ^>= 0.14.18
    , cryptonite >= 0.25 && < 0.26
    , data-default ^>= 0.7.1
    , optparse-applicative ^>= 0.14.3
    , monad-control
    , transformers-base
    , unliftio-core

executable server
  import: exe-base
  hs-source-dirs: app
  main-is: Server.hs
