cabal-version:       2.2
name:                file-collector-backend
version:             0.1.0.0
synopsis:            Server for file-collector
-- description:
homepage:            https://github.com/isumif/file-collector
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isumi Feng
maintainer:          contact@zelinf.net
copyright:           Isumi Feng, Lagrand, Joyce Du, cwy
category:            Web

common base
  ghc-options:
      -Wall
      -fdefer-typed-holes
  default-language: Haskell2010
  build-depends:
      base ^>= 4.11
    , file-collector-common
    , servant >= 0.14 && < 0.16
    , servant-server >= 0.14 && < 0.16
    , warp >= 3.2.25 && < 3.3
    , persistent ^>= 2.8.2
    , persistent-template >= 2.5.4 && < 2.6
    , persistent-sqlite ^>= 2.8.2
    , resource-pool >= 0.2.3 && < 0.3
    , text >= 1.2.3 && < 1.3
    , bytestring >= 0.10.8 && < 0.11
    , time >= 1.8.0 && < 1.9
    , aeson ^>= 1.3.1.1
    , monad-logger >= 0.3.30 && < 0.4
    , fast-logger ^>= 2.4.11
    , lens ^>= 4.16.1
    , mtl >= 2.2.2 && < 2.3
    , transformers >= 0.5.5 && < 0.6
    , memory ^>= 0.14.18
    , cryptonite >= 0.25 && < 0.26
    , data-default ^>= 0.7.1
    , optparse-applicative ^>= 0.14.3
    , monad-control ^>= 1.0.2.3
    , transformers-base ^>= 0.4.5.2
    , unliftio-core ^>= 0.1.2.0
    , string-interpolate ^>= 0.1.0.1

common exe-base
  import: base
  build-depends: file-collector-backend
  ghc-options: -threaded

common test-base
  import: exe-base
  build-depends:
      hspec
    , QuickCheck

library
  import: base
  hs-source-dirs: src
  exposed-modules:
      FileCollector.Backend.Main
      FileCollector.Backend.App
      FileCollector.Backend.Config
      FileCollector.Backend.Logger
      FileCollector.Backend.Handler
      FileCollector.Backend.Handler.AppHandler
      FileCollector.Backend.Handler.Auth
      FileCollector.Backend.Handler.Impl.User
      FileCollector.Backend.Handler.Impl.File
      FileCollector.Backend.Database
      FileCollector.Backend.Database.Types.Internal
      FileCollector.Backend.Database.Types.User
      FileCollector.Backend.Database.Types.Role
      FileCollector.Backend.Database.Types.UploadRule
      FileCollector.Backend.Database.Types.Directory
      FileCollector.Backend.Database.Types.File
      FileCollector.Backend.Database.Types.CanUploadTo
      FileCollector.Backend.Database.Class.MonadConnection
      FileCollector.Backend.Database.Class.MonadReadUser
      FileCollector.Backend.Database.Class.MonadReadDirectory
      FileCollector.Backend.Database.Class.MonadWriteDirectory
      FileCollector.Backend.Database.Class.Internal.Prelude
      FileCollector.Backend.Database.Impl.Internal.Prelude
      FileCollector.Backend.Database.Impl.ReadDirectory
      FileCollector.Backend.Database.Impl.WriteDirectory
      FileCollector.Backend.Oss.Class.MonadOssService
      FileCollector.Backend.Oss.Class.MonadReadAliyunConfig
      FileCollector.Backend.Oss.Aliyun
      FileCollector.Backend.Oss.Aliyun.Internal
      FileCollector.Backend.Core.BasicAuth
      FileCollector.Backend.Core.User
      FileCollector.Backend.Core.Password
      FileCollector.Backend.Core.File
  c-sources:
      csrc/aliyun_oss.c
  includes:
      csrc/aliyun_oss.h
  include-dirs:
      csrc
  extra-libraries: pthread oss_c_sdk curl mxml apr-1 aprutil-1

executable server
  import: exe-base
  hs-source-dirs: app
  main-is: Server.hs

test-suite db
  import: test-base
  type: exitcode-stdio-1.0
  hs-source-dirs: test/db
  main-is: Main.hs
  other-modules:
      FileCollector.Backend.Database.Spec.ReadDirectorySpec
      FileCollector.Backend.Database.Spec.Util
      FileCollector.Backend.Database.Spec.TestData
  build-tool-depends:
      hspec-discover:hspec-discover
