cabal-version:       2.2
name:                file-collector-common
version:             0.1.0.0
synopsis:            Common code shared by frontend and backend
-- description:
-- bug-reports:
license:             BSD-3-Clause
author:              Lagrand, Isumi Feng
-- maintainer:
copyright:           Copyright 2019, Lagrand, Isumi Feng
category:            Web
build-type:          Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
      FileCollector.Common.Api
      FileCollector.Common.Api.User
      FileCollector.Common.Api.Dir
      FileCollector.Common.Types.Directory
      FileCollector.Common.Types.User
      FileCollector.Common.Types.Credential
      FileCollector.Common.Types.UserInfo
  build-depends:
      base ^>= 4.11
    , aeson ^>= 1.3.1.1
    , servant ^>= 0.14.1
    , text ^>= 1.2
    , time ^>= 1.8
    , lens
