cabal-version:       2.2
name:                file-collector-common
version:             0.1.0.0
synopsis:            Common code shared by frontend and backend
-- description:
-- bug-reports:
license:             BSD-3-Clause
author:              Lagrand, Isumi Feng
-- maintainer:
copyright:           Copyright 2019, Lagrand, Isumi Feng
category:            Web
build-type:          Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
      FileCollector.Common.Api
      FileCollector.Common.Api.Auth
      FileCollector.Common.Api.User
      FileCollector.Common.Api.Dir
      FileCollector.Common.Types.User
      FileCollector.Common.Types.Directory
      FileCollector.Common.Types.File
      FileCollector.Common.Types.OssProvider
      FileCollector.Common.Utils.Aeson
  build-depends:
      base ^>= 4.11
    , aeson ^>= 1.3.1.1
    , servant ^>= 0.14.1
    , servant-docs ^>= 0.11.2
    , text ^>= 1.2
    , time ^>= 1.8
    , lens ^>= 4.16.1
    , bytestring ^>= 0.10.8.2
