cabal-version:       2.2
name:                file-collector-common
version:             0.1.0.0
synopsis:            Common code shared by frontend and backend
-- description:
-- bug-reports:
license:             BSD-3-Clause
author:              Lagrand, Isumi Feng
-- maintainer:
copyright:           Copyright 2019, Lagrand, Isumi Feng
category:            Web
build-type:          Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
      FileCollector.Common.Api
      FileCollector.Common.Api.Auth
      FileCollector.Common.Api.User
      FileCollector.Common.Api.File
      FileCollector.Common.Types.User
      FileCollector.Common.Types.Password
      FileCollector.Common.Types.Directory
      FileCollector.Common.Types.File
      FileCollector.Common.Types.HashValue
      FileCollector.Common.Types.DownloadRequest
      FileCollector.Common.Types.OssProvider
      FileCollector.Common.Types.OssProviderImpl.Aliyun
      FileCollector.Common.Types.JsonByteString
      FileCollector.Common.Base.Convertible
      FileCollector.Common.Base.MonadConvertible
      FileCollector.Common.Base.Aeson
  build-depends:
      base ^>= 4.11
    , aeson ^>= 1.3.1.1
    , servant ^>= 0.14.1
    , servant-docs ^>= 0.11.2
    , text ^>= 1.2
    , time ^>= 1.8
    , lens ^>= 4.16.1
    , bytestring ^>= 0.10.8.2
    , base64-bytestring ^>= 1.0.0.2

executable gen-api-doc
  main-is: GenApiDoc.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
      base
  if !impl(ghcjs)
    build-depends:
        file-collector-common
      , servant-docs
      , servant-pandoc
      , pandoc ^>= 2.5
      , text ^>= 1.2
