cabal-version:       2.2
name:                file-collector-frontend
version:             0.1.0.0
synopsis:            Web frontend of File Collector
-- description:
-- bug-reports:
license:             BSD-3-Clause
author:              Lagrand, Isumi Feng
-- maintainer:
copyright:           Copyright 2019, Lagrand, Isumi Feng
category:            Web
build-type:          Custom
extra-source-files:
    static/*.css
  , static/*.ico

custom-setup
  setup-depends:
      base ^>= 4.11
    , Cabal ^>= 2.2
    , filepath ^>= 1.4.2

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
      -Wall
      -Wno-simplifiable-class-constraints
  exposed-modules:
      FileCollector.Frontend.Main
    , FileCollector.Frontend.Utils
    , FileCollector.Frontend.AppEnv
    , FileCollector.Frontend.UI.Login
    , FileCollector.Frontend.UI.Uploader
  build-depends:
      base ^>= 4.11
    , file-collector-common
    , aeson ^>= 1.3.1.1
    , containers ^>= 0.5.11
    , jsaddle ^>= 0.9.6.0
    , reflex ^>= 0.5.0.1
    , reflex-dom ^>= 0.4
    , reflex-dom-core ^>= 0.4
    , servant ^>= 0.14.1
    , servant-reflex ^>= 0.3.4
    , text ^>= 1.2
    , time ^>= 1.8
    , lens ^>= 4.16.1
    , mtl
    , transformers
  c-sources:
      csrc/current_path.c

executable app
  hs-source-dirs: app
  default-language: Haskell2010
  main-is: Main.hs
  if !impl(ghcjs)
    other-modules:
      FileCollector.Frontend.Main.GHCWarp
  else
    other-modules:
      FileCollector.Frontend.Main.GHCJS
  build-depends:
      base
    , file-collector-frontend
  if !impl(ghcjs)
    build-depends:
        jsaddle ^>= 0.9.6.0
      , filepath ^>= 1.4.2
      , jsaddle-warp ^>= 0.9.6.0
      , wai ^>= 3.2.1.2
      , wai-app-static ^>= 3.1.6.2
      , warp ^>= 3.2.25
      , websockets ^>= 0.12.5.2
      , optparse-applicative ^>= 0.14.3.0
  